Regression: push/pull doesn't work if applied to many vertices #102466

Closed
opened 2022-11-13 01:32:08 +01:00 by Andrea · 11 comments

Blender Version
Broken: 3.0.0, master
Worked: 2.93.9

Short Description
When I apply push/pull to a mesh with more than 1023 vertices this doesn't work.

How to Reproduce

  • Open default scene
  • Select cube -> switch to edit mode -> subdivide cube for 6-7 times
  • Invoke push/pull operator
    bug.blend
**Blender Version** Broken: 3.0.0, master Worked: 2.93.9 **Short Description** When I apply push/pull to a mesh with more than 1023 vertices this doesn't work. **How to Reproduce** - Open default scene - Select cube -> switch to edit mode -> subdivide cube for 6-7 times - Invoke push/pull operator [bug.blend](https://archive.blender.org/developer/F13911697/bug.blend)

Added subscriber: @Pag8ino

Added subscriber: @Pag8ino

This comment was removed by @Pag8ino

*This comment was removed by @Pag8ino*

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Hi, thanks for the report. Please upload .blend file

(A guideline for making a good bug report can be found at https://wiki.blender.org/wiki/Process/Bug_Reports)

Hi, thanks for the report. Please upload .blend file (A guideline for making a good bug report can be found at https://wiki.blender.org/wiki/Process/Bug_Reports)

hi.
when i have many vertices in edit mode mesh>transform>push/pull it doesn't work.bug.blend

hi. when i have many vertices in edit mode mesh>transform>push/pull it doesn't work.[bug.blend](https://archive.blender.org/developer/F13911697/bug.blend)

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Thanks, I can also redo this from scratch. Something between 2.93-3.0.0 has changed

Thanks, I can also redo this from scratch. Something between 2.93-3.0.0 has changed
Pratik Borhade changed title from push/pull error if applied to many vertices to Regression: push/pull doesn't work if applied to many vertices 2022-11-24 18:26:31 +01:00

This issue was referenced by cdfb21c7e2

This issue was referenced by cdfb21c7e247976ccbfb8cb73f63a8238b930d1f

This issue was referenced by cdc1c60f5b

This issue was referenced by cdc1c60f5bacea96d679384ecf46d93eb74d3a93

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-11-24 21:31:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102466
There is no content yet.