Fix T102466: push/pull doesn't work if applied to many vertices

The assignment of member`distance` was missing in rB2d4ec9049744.